refactor: Separate quickMarc schema for different actions (#204)
- create different schemas for view, edit, create actions
- change codebase according to these changes
- separate converters for different actions

BREAKING CHANGE: Added new required field '_actionType' with possible values: view, edit, create
Closes: MODQM-325