@@ -2,14 +2,13 @@ package org.folio.qm.validation;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import org.folio.qm.domain.dto.BaseMarcRecord;
 import org.folio.qm.domain.dto.FieldItem;
 import org.folio.qm.domain.dto.MarcFormat;
-import org.folio.qm.domain.dto.QuickMarc;
 
 public interface ValidationRule {
 
-  Optional<ValidationError> validate(QuickMarc qmRecord);
+  Optional<ValidationError> validate(BaseMarcRecord qmRecord);
 
   boolean supportFormat(MarcFormat marcFormat);
 
@@ -20,6 +19,6 @@ public interface ValidationRule {
   default List<FieldItem> filterFieldsByTagCode(List<FieldItem> fieldItems, String tagCode) {
     return fieldItems.stream()
       .filter(fieldItem -> tagCode.equals(fieldItem.getTag()))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
